<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_farm"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/your_farm" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_marketplace"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/market_place" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_agrobook"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/agrobook" />

    </group>

</menu>
