<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="70dp"
    tools:context="com.agrovamp.agrovamp.QRCodeActivity">

    <Button
        android:id="@+id/scan_qr_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:background="@color/colorAccent"
        android:shadowColor="@android:color/transparent"
        android:layout_marginTop="50dp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scan_qr_button"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:text="@string/or_nenter_code_manually"
        android:gravity="center"
        android:textSize="17sp"/>

    <EditText
        android:id="@+id/qr_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/manually"
        android:inputType="number" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:shadowColor="@android:color/transparent"
        android:layout_below="@id/qr_id_edit_text"/>

</RelativeLayout>
